@@ -100,12 +100,15 @@ class RemoteStripeIntentsTest < Test::Unit::TestCase
         address1: 'block C',
         address2: 'street 48',
         zip: '22400',
-        state: 'California'
+        state: 'California',
+        email: 'test@email.com'
       }
     }
+
     assert response = @gateway.purchase(@amount, @visa_payment_method, options)
     assert_success response
     assert_equal 'succeeded', response.params['status']
+    assert_nil response.params['shipping']['email']
   end
 
   def test_successful_purchase_with_level3_data
@@ -1277,6 +1280,21 @@ class RemoteStripeIntentsTest < Test::Unit::TestCase
     assert store2.success?
     assert_equal store1.authorization, store2.authorization
     assert_equal store1.params['id'], store2.params['id']
+  end
+
+  def test_successful_customer_creating
+    options = {
+      currency: 'GBP',
+      billing_address: address,
+      shipping_address: address.merge!(email: 'test@email.com')
+    }
+    assert customer = @gateway.customer({}, @visa_card, options)
+
+    assert_equal customer.params['name'], 'Jim Smith'
+    assert_equal customer.params['phone'], '(555)555-5555'
+    assert_nil customer.params['shipping']['email']
+    assert_not_empty customer.params['shipping']
+    assert_not_empty customer.params['address']
   end
 
   def test_successful_store_with_false_validate_option
