@@ -31,9 +31,7 @@ class StripePaymentIntentsTest < Test::Unit::TestCase
       brand: 'visa',
       eci: '05',
       month: '09',
-      year: '2030',
-      first_name: 'Longbob',
-      last_name: 'Longsen'
+      year: '2030'
     )
 
     @apple_pay = network_tokenization_credit_card(
@@ -418,8 +416,11 @@ class StripePaymentIntentsTest < Test::Unit::TestCase
     stub_comms(@gateway, :ssl_request) do
       @gateway.purchase(@amount, @google_pay, options)
     end.check_request do |_method, endpoint, data, _headers|
-      assert_match('card[tokenization_method]=android_pay', data) if %r{/tokens}.match?(endpoint)
-      assert_match('card[address_line1]=456+My+Street', data) if %r{/tokens}.match?(endpoint)
+      if %r{/tokens}.match?(endpoint)
+        assert_match('card[name]=Jim+Smith', data)
+        assert_match('card[tokenization_method]=android_pay', data)
+        assert_match('card[address_line1]=456+My+Street', data)
+      end
       assert_match('wallet[type]=google_pay', data) if %r{/wallet}.match?(endpoint)
       assert_match('payment_method=pi_', data) if %r{/payment_intents}.match?(endpoint)
     end.respond_with(successful_create_intent_response_with_google_pay_and_billing_address)
@@ -437,7 +438,8 @@ class StripePaymentIntentsTest < Test::Unit::TestCase
         address1: 'block C',
         address2: 'street 48',
         zip: '22400',
-        state: 'California'
+        state: 'California',
+        email: 'test@email.com'
       }
     }
     stub_comms(@gateway, :ssl_request) do
@@ -451,6 +453,7 @@ class StripePaymentIntentsTest < Test::Unit::TestCase
       assert_match('shipping[address][state]=California', data)
       assert_match('shipping[name]=John+Adam', data)
       assert_match('shipping[phone]=%2B0018313818368', data)
+      assert_no_match(/shipping[email]/, data)
     end.respond_with(successful_create_intent_response)
   end
 
